# bank_system

./: README.md
backend/: CMakeLists.txt
backend/include/: DatabaseManager.h
backend/src/: DatabaseManager.cpp  main.cpp
docs/: Docs.md
frontend/css/: style.css
frontend/html/: login.html  register.html
frontend/js/: register.js
